# alpm-ll.rs

./: Cargo.toml  README.md
alpm-ll/: Cargo.toml  build.rs
alpm-ll/benches/: list.rs
alpm-ll/examples/: callbacks.rs  database.rs  init.rs  list.rs  packages.rs  transaction.rs  vercmp.rs
alpm-ll/src/: add.rs  alpm.rs  be_local.rs  be_pkg.rs  be_sync.rs  cb.rs  conflict.rs  db.rs  deps.rs  dload.rs  error.rs  filelist.rs  handle.rs  lib.rs  list.rs  log.rs  mtree.rs  package.rs  remove.rs  signing.rs  sync.rs  trans.rs  types.rs  util.rs  version.rs
alpm-ll/tests/db/sync/: core.db  extra.db
alpm-sys-ll/: Cargo.toml  build.rs
alpm-sys-ll/src/: ffi.rs  ffi_generated.rs  lib.rs
alpm-utils-ll/: Cargo.toml
alpm-utils-ll/src/: alpm.rs  conf.rs  db.rs  depends.rs
