[package]
name = "alpm-ll"
version = "3.0.0"
authors = ["morganamilo <morganamilo@gmail.com>"]
readme = "../README.md"
edition = "2018"

description = "Rust bindings for libalpm"
homepage = "http://github.com/archlinux/alpm.rs"
repository = "http://github.com/archlinux/alpm.rs"
documentation = "https://docs.rs/alpm"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman"]
categories = ["api-bindings"]
exclude = ["tests"]

[package.metadata.docs.rs]
no-default-features = true
features = [ "docs-rs" ]

[features]
default = []
mtree = ["libarchive", "libarchive3-sys"]
generate = ["alpm-sys-ll/generate"]
checkver = []
docs-rs = ["alpm-sys-ll/docs-rs"]

[dependencies]
bitflags = "1.3.2"
libarchive = { version = "0.1.1", optional = true }
libarchive3-sys = { version = "0.1.2", optional = true }
alpm-sys-ll = { path = "../alpm-sys-ll", version = "3.0.0" }
once_cell = "1.13"
libloading = "0.7"

[build-dependencies]
alpm-sys-ll = { path = "../alpm-sys-ll", version = "3.0.0" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "list"
harness = false
